src/main/java/edu/stanford/infolab/arcspreadux/photoSpreadParser/ExpressionParser.java
/* Generated By:JavaCC: Do not edit this line. ExpressionParser.java */
package edu.stanford.infolab.arcspreadux.photoSpreadParser;
import java.io.StringReader;

import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadCellRange;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadCellRangeCondition;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadCondition;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadConstant;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadConstantExpression;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadContainerExpression;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadDoubleConstant;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadExpression;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadFormulaExpression;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadSimpleCondition;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadSpecialConstants;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadSpecialConstants.PhotoSpreadNullConstant;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.PhotoSpreadStringConstant;
import edu.stanford.infolab.arcspreadux.photoSpreadParser.photoSpreadExpression.photoSpreadFunctions.PhotoSpreadFunction;
import edu.stanford.infolab.arcspreadux.photoSpreadTable.PhotoSpreadCell;
import edu.stanford.infolab.arcspreadux.photoSpreadUtilities.Const;

// ***** end Real imports ****/
/**** Imports within test environment
import photoSpreadParser.parseTestSkeleton.PhotoSpreadCell;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadCellRange;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadCellRangeCondition;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadCondition;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadConstantExpression;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadDoubleConstant;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadStringConstant;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadContainerExpression;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadExpression;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadFormulaExpression;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadFunction;
import photoSpreadParser.parseTestSkeleton.photoSpreadObjects.PhotoSpreadConstant;
import photoSpreadParser.parseTestSkeleton.PhotoSpreadSimpleCondition;
import photoSpreadParser.parseTestSkeleton.photoSpreadObjects.PhotoSpreadDoubleObject;
import photoSpreadParser.parseTestSkeleton.photoSpreadObjects.PhotoSpreadObject;
import photoSpreadParser.parseTestSkeleton.photoSpreadObjects.PhotoSpreadStringObject;
//End Imports within test environment */
public class ExpressionParser implements ExpressionParserConstants {
  private static final boolean GET_FROM_START = true;

  private PhotoSpreadCell _cell;
  private String theStrToParse;
  // Keep track of whether we have ascertained
  // that the formula string is a formula (starts
  // with '=':
  private boolean isFormula = false;

  public ExpressionParser(PhotoSpreadCell _cell, String strToParse)
  {
    this(new StringReader(strToParse));
    this._cell = _cell;
    theStrToParse = strToParse;
  }

  private String grabAllRest(boolean fromStart) {
    if (fromStart)
      return theStrToParse;
    // Return not the entire input string,
    // but only what is left unparsed so far:
    String extraText = "";
    Token eofToken;
        while ((eofToken = getNextToken()).kind != EOF) extraText += eofToken.image + " ";
        return extraText;
  }

  public static void main(String args []) throws ParseException
  {
    java.io.StringReader sr = new java.io.StringReader("=A1[hello = jello]");
    java.io.Reader r = new java.io.BufferedReader(sr);
    ExpressionParser parser = new ExpressionParser(r);
    PhotoSpreadExpression expr = parser.Expression();
    System.out.println(expr.toString());
  }

  final public PhotoSpreadExpression Expression() throws ParseException {
  PhotoSpreadExpression e;
  PhotoSpreadConstant nonFormulaConst;
  PhotoSpreadConstantExpression expr;
  Token aToken;
  String extraText = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
        e = FormulaExpression();
    // Must not have any left-over tokens after the expression:
    extraText = "";
    //while ((eofToken = getNextToken()).kind != EOF) extraText += eofToken.image;
    extraText += grabAllRest(!GET_FROM_START);
    if (!extraText.isEmpty()) {if (true) throw new ParseException("Can't make sense of final formula portion: '"+ extraText+ "'");}
    return e;
	case NUMBER:
      case SIGNED_NUMBER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SIGNED_NUMBER:
          aToken = jj_consume_token(SIGNED_NUMBER);
          break;
        case NUMBER:
          aToken = jj_consume_token(NUMBER);
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
    nonFormulaConst = new PhotoSpreadDoubleConstant(this._cell, aToken.image);
    // Error if any text comes after the number:
    extraText = grabAllRest(!GET_FROM_START);
    if (!extraText.isEmpty()) {
      {if (true) throw new ParseException(
        "Non-formula text must be a sole number, or text that does not start with a number: '"+
        extraText + "'");}
        } else {
          expr = new PhotoSpreadConstantExpression();
      expr.addConstant(nonFormulaConst);
      return expr;
    }
	case SPECIAL_CONST:
        aToken = jj_consume_token(SPECIAL_CONST);
        expr = SpecialConstant();
        return expr;
	default:
        jj_la1[1] = jj_gen;
    // Non-formula, nor a number or special object. The whole
    // entry in the formula editor is a string with no special
    // meaning (See also comment in catch clause below):
    nonFormulaConst = new PhotoSpreadStringConstant(this._cell, theStrToParse);
    expr = new PhotoSpreadConstantExpression();
    expr.addConstant(nonFormulaConst);
    return expr;
      }
    } catch (TokenMgrError ex) {
        // For some non-formula strings in the formula editor
        // even the check for a leading '=' sign throws
        // an error. E.g. when the first char is a '!',
        // which is part of the grammar. We therefore
        // catch all token parsing exceptions. If we
        // are in fact parsing a formula (formula string
        // starts with '=' then we re-throw the exception.
        // Else we accept the entire string and return
        // a string constant.
        if (isFormula)
        {
          {if (true) throw ex;}
        }
    nonFormulaConst = new PhotoSpreadStringConstant(this._cell, theStrToParse);
    expr = new PhotoSpreadConstantExpression();
    expr.addConstant(nonFormulaConst);
    return expr;
    }
  }

  final public PhotoSpreadFormulaExpression FormulaExpression() throws ParseException {
  PhotoSpreadFormulaExpression fe;
  Token selection;
  PhotoSpreadCondition condition;

  // At this point we are sure that the
  // string in the formula editor starts
  // with '='. 
  isFormula = true;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOLLAR:
    case UNION:
    case SUM:
    case MIN:
    case MAX:
    case COUNT:
    case AVG:
    case CHARS_UPPER:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
      case CHARS_UPPER:
        fe = ContainerExpression();

        break;
      case UNION:
      case SUM:
      case MIN:
      case MAX:
      case COUNT:
      case AVG:
        fe = FunctionCall();

        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        jj_consume_token(LBRACKET);
        condition = Condition();
          fe.addCondition(condition, "NO_BOOLEAN");
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case AND:
          case OR:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case OR:
            jj_consume_token(OR);
            condition = Condition();
            fe.addCondition(condition, "OR");
            break;
          case AND:
            jj_consume_token(AND);
            condition = Condition();
            fe.addCondition(condition, "AND");
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(RBRACKET);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PERIOD:
        jj_consume_token(PERIOD);
        selection = jj_consume_token(IDENTIFIER);
          fe.addSelection(selection.image);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
    case SPECIAL_CONST:
    case NUMBER:
    case IDENTIFIER:
    case STRING_CONSTANT:
      fe = Constant();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    return fe;
  }

  final public PhotoSpreadContainerExpression ContainerExpression() throws ParseException {
  PhotoSpreadContainerExpression ce;
  PhotoSpreadCellRange cellRange;
    cellRange = OldCellRange();
    ce = new PhotoSpreadContainerExpression(cellRange);
    return ce;
  }

  final public PhotoSpreadConstantExpression ConstantExpression() throws ParseException {
  PhotoSpreadConstant obj;
  PhotoSpreadConstantExpression expr = new PhotoSpreadConstantExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPECIAL_CONST:
    case NUMBER:
    case IDENTIFIER:
    case STRING_CONSTANT:
      obj = Constant();
      expr = new PhotoSpreadConstantExpression();
      expr.addConstant(obj);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        obj = Constant();
        expr = new PhotoSpreadConstantExpression();
        expr.addConstant(obj);
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    return expr;
  }

  final public PhotoSpreadConstant Constant() throws ParseException {
  Token str;
  PhotoSpreadConstant obj;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPECIAL_CONST:
      str = jj_consume_token(SPECIAL_CONST);
        obj = SpecialConstant();
      break;
    case NUMBER:
      str = jj_consume_token(NUMBER);
        obj = new PhotoSpreadDoubleConstant(this._cell, str.image);
      break;
    case IDENTIFIER:
      str = jj_consume_token(IDENTIFIER);
            obj = new PhotoSpreadStringConstant(this._cell, str.image);
      break;
    case STRING_CONSTANT:
      str = jj_consume_token(STRING_CONSTANT);
        obj = new PhotoSpreadStringConstant(this._cell, str.image);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    return obj;
  }

  final public PhotoSpreadConstant SpecialConstant() throws ParseException {
  Token specConst;
  PhotoSpreadConstant obj;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBJ_COLLECTION:
      specConst = jj_consume_token(OBJ_COLLECTION);
        obj = new PhotoSpreadSpecialConstants.ObjectsCollectionConstant(this._cell);
      break;
    case NULL:
      specConst = jj_consume_token(NULL);
            obj = PhotoSpreadSpecialConstants.PhotoSpreadNullConstant.getInstance();
      break;
    default:
      jj_la1[11] = jj_gen;
      {if (true) throw new ParseException("Unknown special constant: '"+ getToken(0)+ "'");}
    }
    {if (true) return obj;}
    throw new Error("Missing return statement in function");
  }

  final public PhotoSpreadFunction FunctionCall() throws ParseException {
  PhotoSpreadFunction func;
  String functionName;
  PhotoSpreadFormulaExpression fe;
    functionName = FunctionName();
    func = PhotoSpreadFunction.getInstance(functionName.toLowerCase(), this._cell);
    jj_consume_token(LPARENS);

    fe = FormulaExpression();
    func.addArgument(fe);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      fe = FormulaExpression();
      func.addArgument(fe);
    }
    jj_consume_token(RPARENS);
    {if (true) return func;}
    throw new Error("Missing return statement in function");
  }

  final public PhotoSpreadCellRange OldCellRange() throws ParseException {
  Token startCol;
  boolean startColFixed = false;
  Token startRow;
  boolean startRowFixed = false;
  Token endCol;
  boolean endColFixed = false;
  Token endRow;
  boolean endRowFixed = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOLLAR:
      jj_consume_token(DOLLAR);
      startColFixed = true;
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    startCol = jj_consume_token(CHARS_UPPER);

    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOLLAR:
      jj_consume_token(DOLLAR);
      startRowFixed = true;
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    startRow = jj_consume_token(NUMBER);


    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
        jj_consume_token(DOLLAR);
      endColFixed = true;
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      endCol = jj_consume_token(CHARS_UPPER);

      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
        jj_consume_token(DOLLAR);
      endRowFixed = true;
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      endRow = jj_consume_token(NUMBER);

      {if (true) return new PhotoSpreadCellRange(startColFixed, startCol.image, startRowFixed, Integer.parseInt(startRow.image), endColFixed, endCol.image, endRowFixed, Integer.parseInt(endRow.image));}
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    {if (true) return new PhotoSpreadCellRange(startColFixed, startCol.image, startRowFixed, Integer.parseInt(startRow.image));}
    throw new Error("Missing return statement in function");
  }

  final public PhotoSpreadCondition Condition() throws ParseException {
  PhotoSpreadCondition cond;
  Token rhsToken;
  Token lhsToken;
  Token compOpToken;
  String rhs;
  String compOp;
  String lhs;
  PhotoSpreadCellRange cellRange;
    rhsToken = jj_consume_token(IDENTIFIER);
    rhs = rhsToken.image;
    compOpToken = CompOp();
    compOp = compOpToken.image;
    if (jj_2_1(2)) {
      cellRange = OldCellRange();
        cond = new PhotoSpreadCellRangeCondition(rhs, compOp, cellRange);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NULL:
        lhsToken = jj_consume_token(NULL);
            lhs = Const.NULL_VALUE_STRING; cond = new PhotoSpreadSimpleCondition(rhs, compOp, PhotoSpreadNullConstant.getInstance());
        break;
      case NUMBER:
        lhsToken = jj_consume_token(NUMBER);
        lhs = lhsToken.image; cond = new PhotoSpreadSimpleCondition(rhs, compOp, lhs);
        break;
      case IDENTIFIER:
        lhsToken = jj_consume_token(IDENTIFIER);
        lhs = lhsToken.image; cond = new PhotoSpreadSimpleCondition(rhs, compOp, lhs);
        break;
      case STRING_CONSTANT:
        lhsToken = jj_consume_token(STRING_CONSTANT);
        lhs = lhsToken.image; cond = new PhotoSpreadSimpleCondition(rhs, compOp, lhs);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return cond;}
    throw new Error("Missing return statement in function");
  }

  final public Token CompOp() throws ParseException {
  Token comp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      comp = jj_consume_token(EQ);

      break;
    case NE:
      comp = jj_consume_token(NE);

      break;
    case LEQ:
      comp = jj_consume_token(LEQ);

      break;
    case GEQ:
      comp = jj_consume_token(GEQ);

      break;
    case LT:
      comp = jj_consume_token(LT);

      break;
    case GT:
      comp = jj_consume_token(GT);

      break;
    default:
      jj_la1[19] = jj_gen;
